syntax = "proto3";

option go_package = "../pb;pb";
import "user.proto";

service CommentService{
  rpc CommentAction(CommentRequest) returns (CommentResponse);
  rpc GetCommentList(CommentListRequest) returns (CommentListResponse);
}

message CommentRequest{
  int64 user_id = 1;
  int64 video_id = 2;
  string comment_text = 3;
  int64 comment_id = 4;
  int64 action_type = 5;
}

message CommentResponse{
  Comment comment = 1;
}

message Comment{
  int64 id = 1;
  UserInfo user = 2;
  string comment_text = 3;
  string create_time = 4;
}

message CommentListRequest{
  int64 video_id = 1;
}

message CommentListResponse{
  repeated Comment comment_list = 1;
}